--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "-": "^0.0.1",
     "@minecraft/server": "^1.4.0-beta.1.20.10-stable",
+    "@minecraft/server-ui": "^1.1.0",
     "add": "^2.0.6",
     "tsc": "^2.0.4"
   },
